# spectre

./: .gitignore  Dockerfile  README.md  build.xml  docker.profile
_codegen/: pom.xml
_codegen/src/main/java/skadistats/acg/: Generate.java
_codegen/src/main/resources/templates/: AspectReader.stg  AspectWriter.stg  MsgReader.stg  MsgWriter.stg
aspectSerializer/: pom.xml
aspectSerializer/src/main/java/skadistats/: WritePosition.java
aspectSerializer/src/main/java/skadistats/spectre/: Config.java  Spectre.java
aspectSerializer/src/main/proto/: msgtypes.properties
aspectSerializer/src/main/proto/aspect/: util.proto
aspectSerializer/src/main/proto/aspect/basic/: life_state.proto  match.proto  player.proto  position.proto  time.proto  times.proto  timing.proto
aspectSerializer/src/main/proto/aspect/derived/: vacuum.proto
aspectSerializer/src/main/proto/internal/: fs.proto
haskell/: Setup.hs  cabal.sandbox.config  spectre.cabal
haskell/src/Skadistats/Spectre/: AspectReader.hs  S3.hs  Util.hs
python/: import_msgtypes.py
python/spectre/: __init__.py  aspect_enum.py  courier.py  err.py  reader.py  util.py
ruby/: Gemfile  LICENSE.txt  import_msgtypes.rb  spectre.gemspec
ruby/lib/: reader.rb  util.rb
ruby/lib/spectre/: version.rb
ruby/spectre/: README.md  reader.rb  spectre.gemspec  spectre.rb  util.rb
ruby/spectre/lib/: mapper.rb  reader.rb  spectre.rb
ruby/spectre/proto/aspect/basic/: life_state.pb.rb  match.pb.rb  player.pb.rb
ruby/spectre/proto/aspect/derived/: vacuum.pb.rb
ruby/spectre/proto/internal/: fs.pb.rb
(+26 files in other folders)
